# continuation-batcher

./: .gitignore  Cargo.toml  README.md  ReproduceSteps.md  cliErrorAtLoop27.txt  custom.loadinfo.json  gensol.sh  test.sh  test_batch.sh  test_cont.sh  test_keccak.sh  test_simple.sh
sample/: K8.params  batchinfo.rec.json  batchinfo1.json  batchinfo2.json  batchinfo_cont.json  batchinfo_empty.json  batchscript.just  commits.json  cont-final.json  cont-init.json  test.0.instance.data  test.0.transcript.data  test.loadinfo.json  test.vkey.data  test.vkeyfull.data
scripts/: gensol.sh  test.sh  test_batch.sh  test_cont.sh  test_final.sh  test_with_prefix_cont.sh
sol/: package-lock.json  package.json  truffle-config.js
sol/contracts/: AggregatorConfig.sol  AggregatorLib.sol  AggregatorVerifier.sol  AggregatorVerifierStep1.sol  AggregatorVerifierStep2.sol  AggregatorVerifierStep3.sol  AggregatorVerifierStep4.sol  BatchVerifier.sol
sol/migrations/: 1_deploy_contracts.js
sol/templates/: AggregatorConfig.sol.tera  AggregatorVerifierStepEnd.sol.tera  AggregatorVerifierStepStart.sol.tera
sol/test/: test.js
src/: appbuilder.rs  args.rs  batch.rs  command.rs  exec.rs  lib.rs  main.rs  names.rs  pk_cache.rs  proof.rs  utils.rs  vkey.rs
src/batch_prover/: commitment_check.rs  loader.rs  mod.rs
src/cli/: appbuilder.rs  args.rs  command.rs  main.rs  multi_proofs.rs  request.rs
src/round1/: mod.rs  round1.rs
src/samples/: mod.rs  simple.rs  wasm.rs
src/setup/: mod.rs  params.rs  verifying_key.rs
src/single_prover/: loader.rs  mod.rs  native_prover.rs  verifier.rs  witness_prover.rs
src/single_prover/prover/: mod.rs  native.rs  witness.rs
src/utils/: cache.rs  fs.rs  mod.rs
test_output/: aggregate-circuit-auto-submit.22.22.final.0.instance.data  aggregate-circuit-auto-submit.22.22.final.0.shadowinstance.data  aggregate-circuit-auto-submit.22.22.final.0.transcript.data
