[package]
name = "circuits-batcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "circuit-batcher"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.68"
ark-std = { version = "0.4.0" }
downcast-rs = "1.2.0"
env_logger = "0.9.3"
halo2aggregator-s = { git = "https://github.com/DelphinusLab/halo2aggregator-s.git", tag="stable-logup-shuffle-v1.0.1" }
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", tag="stable-logup-shuffle-v1.0.1" }
ff = "0.12"
log = "0.4.17"
md5 = "0.7.0"
num-integer = "0.1"
num-bigint = { version = "0.4.5", features = ["rand"] }
num-traits = "0.2.15"
num-derive = "0.3"
num = "0.4"
wabt = "0.10.0"
lazy_static = "1.4.0"
rand = "0.8.4"
sha2 = "0.10.6"
sha3 = "0.10.8"
strum = "0.24.1"
strum_macros = "0.24.1"
wast = "47.0.0"
clap = { version = "3.2.22", features = ["derive","cargo"] }
hex = "0.4.3"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitvec = "1.0.1"
quote = "1.0.25"
lru = "0.11.0"
zkwasm-prover = { git = "https://github.com/DelphinusLab/zkWasm-prover.git", tag="stable-logup-shuffle-v1.0.1", optional = true }

[dev-dependencies]
rusty-fork = "0.3.0"

[features]
default = []
perf = ["dep:zkwasm-prover"]
profile = ["ark-std/print-trace"]
cuda = ["halo2_proofs/cuda"]
on_prove_pairing = ["halo2aggregator-s/on_prove_pairing_affine"]

[profile.dev]
opt-level = 3

